--- a/libs/CONFIG.INI
+++ b/libs/CONFIG.INI
@@ -1,8 +1,8 @@
 [ReadPath]
-path = C:/Users/kanbe/Desktop/samp
+path = C:/Users/***
 
 [OutputPath]
-path = C:/Users/kanbe/Desktop/out
+path = C:/Users/***
 
 [Display]
 show = OFF
